@@ -6757,6 +6757,7 @@ Metallizer,
 MetalZelda,
 Olivier Cléro,
 PhoenixII54,
+Razdarac;
 Rekinenko,
 Equipe Solarus,
 The Unknown
