@@ -1,6 +1,6 @@
 properties{
-  x = 0,
-  y = 0,
+  x = 8320,
+  y = 5112,
   width = 960,
   height = 960,
   min_layer = 0,
@@ -16,7 +16,7 @@ tile{
   y = 64,
   width = 320,
   height = 176,
-  pattern = "skybox",
+  pattern = "886",
 }
 
 tile{
@@ -3140,7 +3140,7 @@ tile{
   y = 240,
   width = 16,
   height = 720,
-  pattern = "skybox",
+  pattern = "886",
 }
 
 tile{
@@ -3149,7 +3149,7 @@ tile{
   y = 240,
   width = 16,
   height = 720,
-  pattern = "skybox",
+  pattern = "886",
 }
 
 tile{
@@ -3158,7 +3158,7 @@ tile{
   y = 944,
   width = 288,
   height = 16,
-  pattern = "skybox",
+  pattern = "886",
 }
 
 tile{
@@ -3167,7 +3167,7 @@ tile{
   y = 464,
   width = 288,
   height = 32,
-  pattern = "skybox",
+  pattern = "886",
 }
 
 tile{
