@@ -381,6 +381,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	ADD: Added the marathon minigame.
 	ADD: Added the ability to switch shaders through the options menu (#119).
 	ADD: Added a world map caption depending on the currently visible area (#192).
+	ADD: Added the Master Sword cutscene.
 	CHG: Redone Spectral Ganon's sprite (#29).
 	CHG: Changed Spectral Ganon's settings according to the sprite (#29).
 	CHG: Moved the green house in the east of the castle.
@@ -411,6 +412,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Rescripted bombs with custom entities.
 	CHG: Replaced the parchment font by "capital" (#184).
 	CHG: Player names can now have up to 8 characters.
+	CHG: Allowed the scrollable map to be panned farther.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
